# EvolveLegacyRebornLauncher

./: .gitignore  CMakeLists.txt  N3N-PATCH.md  README.md  console_usage.txt  evolvelauncher.manifest  launcher.rc  n3nmanager.manifest
include/xxhash/: xxhash.hpp
src/: GameFiles.h  Launcher.cpp  N3NManager.cpp  main.cpp  n3nmanager.cpp
src/launcher/: PipeHelper.cpp  PipeHelper.h
src/log/: Logger.cpp  Logger.h
src/n3n/: N3NHelper.cpp  N3NHelper.h
src/qt/: DraggableLabel.cpp  DraggableLabel.h  FileDownloader.hpp  Updater.hpp
src/util/: SaveFileHelper.cpp  SaveFileHelper.h
